Added some screenshots

--- a/report/EGauthorGuidelines-eurovis14-star.tex
+++ b/report/EGauthorGuidelines-eurovis14-star.tex
@@ -92,6 +92,7 @@ TODO
 
 
 
+
 \section{Terrain reconstruction}
 
 The majority of our effort was aimed towards reconstructing the surface underneath the bridge.
@@ -125,7 +126,14 @@ If there are no such points to be found sample the surrounging area of the terra
 \item{5. Interpolate the z coordinate with distance as a weight on sampled points from 4.}
 \end{itemize}
 
+This approach brings much better results than plain interpolation as it only takes into account the cloud points that are important for calculation.
+
 \section{Bridge reconstruction}
+
+
+\section{Issues}
+
+
 
 \section{Conclusion}
 TODO
