Bodge fix for intersection and bridge width

--- a/report/EGauthorGuidelines-eurovis14-star.tex
+++ b/report/EGauthorGuidelines-eurovis14-star.tex
@@ -81,10 +81,11 @@
 \maketitle
 
 \begin{abstract}
-When gathering LiDAR data of the terrain some object might interfere with the surroundings in such a way that a lot of detail is lost.
-One of this examples are bridges.
-Details of it are lost and they have a large impact on the terrain bellow which is also lost.
+When LiDAR data of the terrain is being acquired some object might interfere with the surroundings in such a way that a lot of detail is lost.
+One type of these examples are bridges.
+Details of them are lost and they have a large impact on the terrain bellow which is also lost.
 In this paper we propose an algorithm to reconstruct the lost terrain and basic bridge geometry using additional data about bridges and the terrain found in SHP files.
+We discuss the results that this kind of an approach brings and what can be done to further improve it.
 \end{abstract}
 
 
